force-app/main/default/objects/LLC_BI__Memo_Data__c/fields/LLC_BI__Memo__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Memo__c</fullName>
    <description>The Master-Detail relationship with the Memo. This field is automatically set and required. It associates the details of the field changes on the memo with the memo these changes are associated to. This field is set behind the scenes and is used to auto apply changes to the fields adjusted on a memo.</description>
    <label>Memo</label>
    <referenceTo>LLC_BI__Credit_Memo_Modifcation__c</referenceTo>
    <relationshipLabel>Memo_Data</relationshipLabel>
    <relationshipName>Memo_Data_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>