force-app/main/default/objects/LLC_BI__Memo_Data__c/fields/LLC_BI__Memo_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Memo_Field_Name__c</fullName>
    <description>The name of the field on the Memo that represents the category. This field is automatically set when a memo is created, and details of the changes are filled in. This field is set behind the scenes and is used to auto apply changes to the fields adjusted on a memo</description>
    <label>Memo_Field_Name__c</label>
    <type>TextArea</type>
</CustomField>