force-app/main/default/objects/LLC_BI__Memo_Data__c/fields/LLC_BI__Proposed__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Proposed__c</fullName>
    <description>The value of the field at the time the memo was approved/rejected/submitted. This field is set behind the scenes and is used to auto apply changes to the fields adjusted on a memo.</description>
    <label>Proposed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>